# DRF_project

./: .env.sample  coverage.txt  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_course_lesson_owner_lesson.py  0003_subscription.py  0004_course_price_lesson_price.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py  load_payments.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_link_payments_session_id_and_more.py
